--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   go_router: ^12.1.3
   modal_progress_hud_nsn: ^0.4.0
   sqflite: ^2.3.0
-
+  fl_chart: ^0.51.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
