--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
+  bloc_provider: ^1.0.0
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.51.0
+  flutter_bloc: ^8.1.3
   flutter:
     sdk: flutter
   go_router: ^12.1.3
   modal_progress_hud_nsn: ^0.4.0
+  provider: ^6.1.1
   sqflite: ^2.3.0
-  fl_chart: ^0.51.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
